tests/NormalTests/paczka2/big_fuzzy/19231600.err
Error in line 11: A324 S982 83,0
Error in line 12: tQGWu S982 49,6
Error in line 24: Ã
Error in line 28: A324 S221 12,4
Error in line 23: ZxUPlYFDwd S982 93,7
Error in line 40: A324 S995 49,47
Error in line 41: A324 S995 14,9
Error in line 48: A324 A324 13,9
Error in line 49: ZxUPlYFDwd S221 95,8
Error in line 43: HVN1 S221 15,6
Error in line 42: C1mqezk S221 54,0
Error in line 67: C1mqezk A324 44,1
Error in line 79: C1mqezk S221 -2,9
Error in line 74: C1mqezk S221 54,8
Error in line 89: HVN1 S982 23,6
Error in line 116: HVN1 A324 55,1
Error in line 127: A324 A324 61,3
Error in line 132: A324 S982 91,1
Error in line 140: A324 S982 54,0
Error in line 155: oO6DTkhmMH S995 67,9
Error in line 157: A324 S221 9,6
Error in line 160: ZxUPlYFDwd S221 85,
Error in line 159: A324 S982 61,8
Error in line 166: ZxUPlYFDwd S995 4,2
Error in line 172: p58d6Bh S221 49,0
Error in line 174: HVN1 S982 17,9
Error in line 181: oO6DTkhmMH S995 39,9
Error in line 179: HVN1 A324 27,6
Error in line 196: C1mqezk S982 9,1
Error in line 206: A324 S221 32,7
Error in line 218: HVN1 S982 61,4
Error in line 199: C1mqezk A324 29,1
Error in line 225: ZxUPlYFDwd S995 14,8
Error in line 224: p58d6Bh S995 16,0
Error in line 207: tQGWu S995 173,9
Error in line 244: oO6DTkhmMH S982 3,42
Error in line 237: C1mqezk S982 83,9
Error in line 232: p58d6Bh S982 125,3
